// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffUtils calculateEntityDiff returns correct result for both added and removed entries 1`] = `
Object {
  "newEntries": Array [
    Object {
      "id": 5,
    },
    Object {
      "id": 6,
    },
  ],
  "removedEntries": Array [
    Object {
      "id": 3,
    },
    Object {
      "id": 4,
    },
  ],
}
`;

exports[`diffUtils calculateEntityDiff returns correct result for new entries 1`] = `
Object {
  "newEntries": Array [
    Object {
      "id": 3,
    },
  ],
  "removedEntries": Array [],
}
`;

exports[`diffUtils calculateEntityDiff returns correct result for removed entries 1`] = `
Object {
  "newEntries": Array [],
  "removedEntries": Array [
    Object {
      "id": 3,
    },
  ],
}
`;

exports[`diffUtils calculateEntityDiff returns empty result for identical arrays 1`] = `
Object {
  "newEntries": Array [],
  "removedEntries": Array [],
}
`;

exports[`diffUtils calculateJoinTableDiff returns correct result for both added and removed entries 1`] = `
Object {
  "newEntries": Array [
    Object {
      "orgId": 2,
      "userId": 3,
    },
  ],
  "removedEntries": Array [
    Object {
      "orgId": 1,
      "userId": 1,
    },
  ],
}
`;

exports[`diffUtils calculateJoinTableDiff returns correct result for new entries 1`] = `
Object {
  "newEntries": Array [
    Object {
      "orgId": 2,
      "userId": 3,
    },
  ],
  "removedEntries": Array [],
}
`;

exports[`diffUtils calculateJoinTableDiff returns correct result for removed entries 1`] = `
Object {
  "newEntries": Array [],
  "removedEntries": Array [
    Object {
      "orgId": 2,
      "userId": 3,
    },
  ],
}
`;

exports[`diffUtils calculateJoinTableDiff returns empty result for identical arrays 1`] = `
Object {
  "newEntries": Array [],
  "removedEntries": Array [],
}
`;
